--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-a
+<!DOCTYPE html>
+<html>
+<head>
+<title>Curriculo Stephanie</title>
+<style>
+    p1 {
+       background-color:yellow;
+     }
+  </style>
+</head>
+  <link rel="stylesheet" href="css/steph.css"
+<center><body background="img/flores.jpg"
+
+<center><h1 style= "color:yellow>">Curriculo </h1>
+<div class="borda">
+<center><img class="imgstephanie" src="img/stephanie.jpg" width="150>"
+</br>
+</br>
+
+<p1 style= "color:black"><b>Nome:</b>Stephanie Lisboa Silva</p>
+<p1><b>Data de nascimento:</b> 26/09/1997</p>
+<p1><b>Estado civil:</b>Solteiro</p>
+<p1><b>Nacionalidade:</b>Brasileiro</p>
+<p1><b>Endereço:</b>Rua Petrolina,320 Jardim Mutinga</P>
+<p1><b>CRP:</b>06463200<p>
+<p1><b>Telefone:</b>(11)95984-9924
+<p1><b>Cidade:</>Barueri</p>     <b>Estado:</b>São Paulo<p>
+<p1><b>Email:</b>Stephanielisboa743@gmail.com</p>
+<br/>
+<br/>
+
+<p1> <b> Formação Academica </b> <p>
+<p1> Ensino médio técnico em telecomunicações (Dez/2015) <p>
+<p1> Ensino Superior em Analíse e Desenvolvimento de Sistemas (Jun/2021) <p>
+<br/>
+</div>
+</bt>
+</br>
+
+<table>
+<tr>
