--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      }
   </style>
 </head>
-  <link rel="stylesheet" href="css/steph.css"
+  <link rel="stylesheet" href="css/stephanie.css"
 <center><body background="img/flores.jpg"
 
 <center><h1 style= "color:yellow>">Curriculo </h1>
