--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   </style>
 </head>
   <link rel="stylesheet" href="css/stephanie.css"
-<center><body background="img/flores.jpg"
+<center><body background="images/flores.jpg"
 
 <center><h1 style= "color:yellow>">Curriculo </h1>
 <div class="borda">
-<center><img class="imgstephanie" src="img/stephanie.jpg" width="150>"
+<center><img class="imgstephanie" src="images/stephanie.jpg" width="150>"
 </br>
 </br>
 
